Text wrapping & misc. fixes.

--- a/docs/_scss/index.scss
+++ b/docs/_scss/index.scss
@@ -251,6 +251,7 @@ a.quick-link {
         padding: 8px 0 0 20px;
         margin: 0 10px 20px 0;
         height: 50px;
+        min-width: 210px;
         border: 1px solid #e0ded2;
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
